Some more revisions

--- a/ieee_spm/adjoints_in_gradients.bib
+++ b/ieee_spm/adjoints_in_gradients.bib
@@ -35,6 +35,13 @@
   publisher={SIAM}
 }
 
+@book{claerbout_1992,
+  title={Earth soundings analysis: Processing versus inversion},
+  author={Claerbout, Jon F},
+  volume={6},
+  year={1992},
+  publisher={Blackwell Scientific Publications Cambridge, Massachusetts, USA}
+}
 
 
 @article{beck_2009,
